--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: mobi_latam_l10n
 description: A new Flutter project.
 version: 0.0.1
-homepage:
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -10,14 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_intl: ^0.0.1
-  intl: ^0.18.1
-  intl_utils: ^2.4.0
+  flutter_intl: 0.0.1
+  intl: 0.19.0
+  intl_utils: 2.8.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: 4.0.0
 
 flutter_intl:
   main_locale: es
