--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ dev_dependencies:
   flutter_lints: 4.0.0
 
 flutter_intl:
-  main_locale: es
+  main_locale: en
+  use-escaping: true
   enabled: true
 
 
@@ -28,7 +29,7 @@ flutter_intl:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
