--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,4 @@
-rb-dir: lib/l10n
+arb-dir: lib/l10n
 template-arb-file: intl_en.arb
 output-localization-file: app_localizations.dart
 nullable-getter: false
